# sylvine

./: .gitignore  README.md
data/config/: config1.ini  config1.yaml
source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
source/config/data/: config1.yaml
source/config/include/: config.hpp
source/config/src/: config.cpp
source/prison/: CMakeLists.txt  Makefile  cmake_install.cmake
source/prison/include/: config.hpp  config_loader.hpp  empty.hpp  evaluator.hpp  game.hpp  output.hpp  parser.hpp  player.hpp  player_factory.hpp  strategy.hpp
source/prison/src/: config.cpp  config_loader.cpp  empty.cpp  evaluator.cpp  game.cpp  output.cpp  player.cpp  player_factory.cpp  strategy.cpp
source/prison/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  empty.cpp  evaluator_tests.cpp  game.cpp  player.cpp  strategy.cpp  test_prison_lib
source/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  prog
